# cookie-agent

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.ai/: CHANGELOG.md  CONSTITUTION.md  DECISIONS.md  KNOWN_ISSUES.md  LESSONS_LEARNED.md  PROJECT_CONTEXT.md  ROADMAP.md  TEAM_GUIDELINES.md
.ai/AGENTS/: code-reviewer.md  ml-vision-engineer.md  qa-engineer.md  runtime-engineer.md  tech-lead.md
.ai/PROMPTS/: implementation.md  qa.md  review.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: README.md
datasets/processed/: README.md
datasets/raw/: README.md
datasets/replay/: README.md
docs/adr/: ADR-0006-configuration-first.md  README.md  template.md
docs/architecture/: README.md  configuration-schema.md  core-interfaces.md
docs/coding-standard/: README.md
docs/development-workflow/: README.md
docs/rfc/: README.md  template.md
models/: README.md
scripts/: README.md
src/cookie_agent/: README.md  __init__.py  version.py
src/cookie_agent/capture/: __init__.py  base.py  exceptions.py  frame_buffer.py  windows_capture.py
src/cookie_agent/checkpoint/: __init__.py  exceptions.py  manager.py  metadata.py  protocols.py  storage.py
src/cookie_agent/cli/: __init__.py  commands.py  exceptions.py  main.py  parser.py  protocols.py
src/cookie_agent/config/: __init__.py  base.py  capture.py  config_name.py  detector.py  env.py  environment.py  exceptions.py  loader.py  merge.py  models.py  paths.py  planner.py  policy.py  ppo.py  reward.py  serializer.py  tracker.py  training.py  validator.py  version.py
src/cookie_agent/core/: __init__.py  actions.py  detection.py  frame.py  protocols.py  reward.py  state.py  tracking.py  types.py
src/cookie_agent/detector/: __init__.py  exceptions.py  model.py  postprocess.py  predictor.py  preprocess.py  types.py
src/cookie_agent/device/: __init__.py  adb_client.py  commands.py  controller.py  exceptions.py  parser.py
src/cookie_agent/environment/: __init__.py  environment.py  exceptions.py  info.py
src/cookie_agent/evaluation/: __init__.py  exceptions.py  metrics.py  protocols.py  runner.py
src/cookie_agent/planner/: __init__.py  builder.py  exceptions.py  mapping.py  planner.py
src/cookie_agent/policy/: __init__.py  exceptions.py  (+3 more)
tests/: README.md  test_capture.py  test_checkpoint.py  test_cli.py  test_config.py  test_core.py  test_detector.py  test_device.py  test_environment.py  test_evaluation.py  test_planner.py  test_policy.py  test_ppo.py  test_replay.py  test_reward.py  test_rl_buffer.py  test_runner.py  test_state_builder.py  test_tracker.py  test_trainer.py  test_training_runner.py  test_version.py
tools/: README.md
(+44 files in other folders)
